--- a/DatingApp.SPA/src/app/nav/nav.component.html
+++ b/DatingApp.SPA/src/app/nav/nav.component.html
@@ -38,15 +38,17 @@
           <a (click)="logout()">Logout</a>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Welcome User
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Welcome {{authService.decodedToken?.unique_name | titlecase}}
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a href="#"><i class="fa fa-user"></i>Edit Profile</a>
+              <a href="#">
+                <i class="fa fa-user"></i>Edit Profile</a>
             </li>
             <li>
-              <a (click)="logout()"><i class="fa fa-signout"></i>Logout</a>
+              <a (click)="logout()">
+                <i class="fa fa-signout"></i>Logout</a>
             </li>
           </ul>
         </li>
