--- a/DatingApp.SPA/src/app/nav/nav.component.html
+++ b/DatingApp.SPA/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
@@ -8,18 +8,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Dating App</a>
+      <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="active" >Dating App</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="#">Matches</a>
+      <ul class="nav navbar-nav" *ngIf="loggedIn()">
+        <li routerLinkActive="active">
+          <a [routerLink]="['/members']">Matches</a>
         </li>
-        <li>
-          <a href="#">Lists</a>
+        <li routerLinkActive="active">
+          <a [routerLink]="['/lists']" >Lists</a>
         </li>
-        <li>
-          <a href="#">Messages</a>
+        <li routerLinkActive="active">
+          <a [routerLink]="['/messages']" >Messages</a>
         </li>
       </ul>
 
@@ -34,19 +34,20 @@
       </form>
 
       <ul *ngIf="loggedIn()" class="nav navbar-nav navbar-right">
-        <li>
-          <a (click)="logout()">Logout</a>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Welcome User
+        <li class="dropdown" dropdown>
+          <a (click)="false" class="dropdown-toggle" dropdownToggle>Welcome {{authService.decodedToken?.unique_name | titlecase}}
             <span class="caret"></span>
           </a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu" *dropdownMenu>
             <li>
-              <a href="#"><i class="fa fa-user"></i>Edit Profile</a>
+              <a href="#">
+                <i class="fa fa-user"></i> Edit Profile</a>
             </li>
+
+            <li role="separator" class="divider"></li>
             <li>
-              <a (click)="logout()"><i class="fa fa-signout"></i>Logout</a>
+              <a (click)="logout()">
+                <i class="fa fa-sign-out"></i> Logout</a>
             </li>
           </ul>
         </li>
