Preparing version to publication

--- a/DatingApp.SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/DatingApp.SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -45,7 +45,7 @@
           <td>
             <strong>{{ item?.file?.name }}</strong>
           </td>
-          <td *ngIf="uploader.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
+          <td nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
         </tr>
       </tbody>
     </table>
@@ -67,7 +67,5 @@
         <span class="glyphicon glyphicon-trash"></span> Remove
       </button>
     </div>
-
   </div>
-
 </div>
